--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ashik-e-rabbani/QA-Automation-suite#readme",
   "devDependencies": {
-    "cypress": "^14.4.0"
+    "cypress": "^14.4.0",
+    "dotenv": "^16.5.0"
   }
 }
