--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,8 +26,8 @@ jobs:
         run: npx cypress run
 
       - name: Upload test artifacts
-        if: failure()
+        if: failure() && env.UPLOAD_ARTIFACTS == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
-          path: cypress/screenshots
+          path: ui-tests/screenshots
