--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/ashik-e-rabbani/QA-Automation-suite#readme",
   "devDependencies": {
     "cypress": "^14.4.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
