--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
         run: npx cypress run
 
       - name: Upload test artifacts
-        if: failure() && env.UPLOAD_ARTIFACTS
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
