--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.2.0"
+  },
+  "dependencies": {
+    "newman": "^6.2.1",
+    "newman-reporter-html": "^1.0.5"
   }
 }
