--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Environment Settings - Setup Node.Js(LTE version) in your machine or Server - Git - IDE (Visual Studio Code is prefferable)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "testUi": "npx cypress run",
+    "testApi":"newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json"
   },
   "repository": {
     "type": "git",
