Modified Load test script
- Removed single test files.
- Added a mechanism for triggering a full Cycle test.
- Added utils class to separate options and each API caller

--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,6 @@
 create .env file before run to hide secrets.
+# CYPRESS prefix is mandatory to use in Cypress project
+CYPRESS_username=YOUR_USER
+CYPRESS_password=YOUR_PASS
+CYPRESS_baseUrl=URL_GOES_HERE
+k6_baseUrl=URL_GOES_HERE
