--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
   api-tests:
     name: API Tests
     runs-on: ubuntu-latest
-    needs: ui-tests
+    # needs: ui-tests
 
     steps:
       - name: Checkout repository
@@ -79,5 +79,5 @@ jobs:
 
       - name: Run k6 performance test
         run: |
-          k6 run performance-tests/createOrderLoadTest.js
+          npm run testload
 
