--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,5 +79,5 @@ jobs:
 
       - name: Run k6 performance test
         run: |
-          npm run testload
+          npm run testloadfulltestLoadFull
 
