--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "testUi": "npx cypress run",
         "testApi": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json",
         "testApiWithReport": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json -r htmlextra --reporter-htmlextra-export=api-tests/reports/api-test-report.html",
-        "testloadFull":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env type=load",
-        "testload":"k6 run performance-tests/tests/createOrderTest.js"
+        "testLoadFull":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env type=load",
+        "testLoad":"k6 run performance-tests/tests/createOrderTest.js"
     },
     "repository": {
         "type": "git",
