--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "testApi": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json",
         "testApiWithReport": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json -r htmlextra --reporter-htmlextra-export=api-tests/reports/api-test-report.html",
         "testLoadFull":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env type=load",
-        "testLoad":"k6 run performance-tests/tests/createOrderTest.js"
+        "testLoad":"k6 run performance-tests/tests/createOrderTest.js",
+        "testLoadCI":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env CI=true"
     },
     "repository": {
         "type": "git",
