--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "testUi": "npx cypress run",
+        "report:merge": "npx mochawesome-merge ui-tests/reports/html/.jsons/*.json > ui-tests/reports/html/.jsons/merged.json",
+        "report:generate": "npx marge ui-tests/reports/html/.jsons/merged.json -f ui-tests-report -o ui-tests/reports/html",
+        "test:ci": "npm run testUi && npm run report:merge && npm run report:generate",
         "testApi": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json",
         "testApiWithReport": "newman run api-tests/Simple_Grocery_Store_API.postman_collection.json -e api-tests/sgsEnv.postman_environment.json -r htmlextra --reporter-htmlextra-export=api-tests/reports/api-test-report.html",
-        "testLoadFull":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env type=load",
-        "testLoad":"k6 run performance-tests/tests/createOrderTest.js",
-        "testLoadCI":"k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env CI=true"
+        "testLoadFull": "k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env type=load",
+        "testLoad": "k6 run performance-tests/tests/createOrderTest.js",
+        "testLoadCI": "k6 run performance-tests/tests/createOrderTest.js --env fullCycle=true --env CI=true"
     },
     "repository": {
         "type": "git",
@@ -25,6 +28,7 @@
     "homepage": "https://github.com/ashik-e-rabbani/QA-Automation-suite#readme",
     "devDependencies": {
         "cypress": "^14.4.0",
+        "cypress-mochawesome-reporter": "^3.8.2",
         "dotenv": "^16.5.0",
         "mochawesome": "^7.1.3",
         "mochawesome-merge": "^5.0.0",
