--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Upload UI-tests Report
         uses: actions/upload-artifact@v4
         with:
-            name: cypress-html-report
+            name: ui-tests-report
             path: artifacts/ui-tests-report.zip
 
       - name: Upload failure screenshots
@@ -51,7 +51,7 @@ jobs:
           path: ui-tests/screenshots
 
   api-tests:
-    name: API Tests
+    name: Postman API tests using Newman 
     runs-on: ubuntu-latest
     # needs: ui-tests
 
@@ -77,7 +77,7 @@ jobs:
           path: api-tests/reports/api-test-report.html 
 
   k6-test:
-    name: Performance tests with K6
+    name: k6 performance test
     runs-on: ubuntu-latest
 
     steps:
