--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,3 +98,9 @@ jobs:
         run: |
           npm run testLoadCI
 
+      - name: Save test output
+        uses: actions/upload-artifact@v4
+        with:
+          name: Perf-tests-output
+          path: performance-tests/test_summary.json
+
