Updated readme for K6

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ api-tests/reports/api-test-report.html
 loadresult.json
 performance-tests/result/output.json
 performance-tests/test_summary.json
+/temp
