--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "url": "git+https://github.com/ashik-e-rabbani/QA-Automation-suite.git"
     },
     "keywords": [],
-    "author": "",
+    "author": "Ashik Rabbani",
     "license": "ISC",
     "bugs": {
         "url": "https://github.com/ashik-e-rabbani/QA-Automation-suite/issues"
