--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,16 @@ jobs:
       - name: Setup node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: '23'  
+          node-version: '23'
+          
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+        
 
       - name: Install dependencies
         run: npm install
@@ -63,6 +72,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '23'
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm install
